--- a/index.html
+++ b/index.html
@@ -1,94 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>AK Graphics Media | Creative Design Studio</title>
-<meta name="description" content="AK Graphics Media – Creative graphic design, branding, and digital solutions." />
-<style>
-:root {
---primary: #7c3aed; /* violet */
---dark: #0f172a; /* slate-900 */
---light: #f8fafc; /* slate-50 */
---muted: #94a3b8; /* slate-400 */
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AKGraphics | Home</title>
+    <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
+        body {
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
 
-* {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-}
+        header {
+            background-color: #1a1a1a;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
 
+        header h1 {
+            font-size: 2.5em;
+        }
 
-body {
-background: var(--light);
-color: var(--dark);
-line-height: 1.6;
-}
+        nav {
+            margin-top: 10px;
+        }
 
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-/* Header */
-header {
-background: linear-gradient(135deg, var(--dark), #1e293b);
-color: white;
-padding: 60px 10%;
-}
+        nav a:hover {
+            color: #f39c12;
+        }
 
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+            color: #fff;
+        }
 
-nav {
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-bottom: 60px;
-}
+        .hero h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
 
+        .hero p {
+            font-size: 1.2em;
+        }
 
-nav h1 {
-font-size: 1.5rem;
-letter-spacing: 1px;
-}
+        .portfolio {
+            padding: 50px 20px;
+            text-align: center;
+        }
 
+        .portfolio h2 {
+            margin-bottom: 40px;
+        }
 
-nav ul {
-list-style: none;
-display: flex;
-gap: 25px;
-}
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
 
+        .project {
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
 
-nav a {
-color: white;
-text-decoration: none;
-font-size: 0.95rem;
-opacity: 0.85;
-}
+        .project img {
+            width: 100%;
+            border-radius: 10px;
+        }
 
+        footer {
+            background-color: #1a1a1a;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+        }
 
-nav a:hover {
-opacity: 1;
-}
+    </style>
+</head>
+<body>
 
+    <header>
+        <h1>AKGraphics</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-.hero {
-max-width: 700px;
-}
+    <section class="hero" id="home">
+        <h2>Creative Graphics Designer</h2>
+        <p>Designing unique visuals that bring your ideas to life.</p>
+    </section>
 
+    <section class="portfolio" id="portfolio">
+        <h2>My Portfolio</h2>
+        <div class="projects">
+            <div class="project">
+                <img src="https://via.placeholder.com/300x200" alt="Project 1">
+                <h3>Project 1</h3>
+            </div>
+            <div class="project">
+                <img src="https://via.placeholder.com/300x200" alt="Project 2">
+                <h3>Project 2</h3>
+            </div>
+            <div class="project">
+                <img src="https://via.placeholder.com/300x200" alt="Project 3">
+                <h3>Project 3</h3>
+            </div>
+        </div>
+    </section>
 
-.hero h2 {
-font-size: 3rem;
-line-height: 1.2;
-margin-bottom: 20px;
-}
+    <footer id="contact">
+        <p>Contact me: <a href="mailto:akgraphics@example.com" style="color:#f39c12;">akgraphics@example.com</a></p>
+        <p>&copy; 2026 AKGraphics. All rights reserved.</p>
+    </footer>
 
-
-.hero p {
-color: #cbd5f5;
-font-size: 1.1rem;
-margin-bottom: 30px;
-}
-
-
-.btn {
+</body>
 </html>
