--- a/index.html
+++ b/index.html
@@ -3,139 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKGraphics | Home</title>
+    <title>Movie List with Images</title>
     <style>
-        /* Basic Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
         body {
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f5f5f5;
         }
-
-        header {
-            background-color: #1a1a1a;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
+        h1 {
+            color: #2c3e50;
         }
-
-        header h1 {
-            font-size: 2.5em;
-        }
-
-        nav {
-            margin-top: 10px;
-        }
-
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            color: #f39c12;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 50px 20px;
-            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
-            color: #fff;
-        }
-
-        .hero h2 {
-            font-size: 2em;
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
             margin-bottom: 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
         }
-
-        .hero p {
-            font-size: 1.2em;
-        }
-
-        .portfolio {
-            padding: 50px 20px;
-            text-align: center;
-        }
-
-        .portfolio h2 {
-            margin-bottom: 40px;
-        }
-
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .project {
+        .movie {
             background-color: #fff;
             padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-bottom: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-
-        .project img {
-            width: 100%;
-            border-radius: 10px;
+        .movie h2 {
+            margin: 0;
+            color: #2980b9;
         }
-
-        footer {
-            background-color: #1a1a1a;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 50px;
+        .movie img {
+            max-width: 200px;
+            display: block;
+            margin: 10px 0;
+            border-radius: 5px;
         }
-
+        .movie p {
+            margin: 5px 0;
+            color: #555;
+        }
+        .movie a {
+            color: #e74c3c;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>AKGraphics</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+    <h1>My Movie List</h1>
+    <input type="text" id="searchInput" onkeyup="searchMovies()" placeholder="Search for movies..">
 
-    <section class="hero" id="home">
-        <h2>Creative Graphics Designer</h2>
-        <p>Designing unique visuals that bring your ideas to life.</p>
-    </section>
-
-    <section class="portfolio" id="portfolio">
-        <h2>My Portfolio</h2>
-        <div class="projects">
-            <div class="project">
-                <img src="https://via.placeholder.com/300x200" alt="Project 1">
-                <h3>Project 1</h3>
-            </div>
-            <div class="project">
-                <img src="https://via.placeholder.com/300x200" alt="Project 2">
-                <h3>Project 2</h3>
-            </div>
-            <div class="project">
-                <img src="https://via.placeholder.com/300x200" alt="Project 3">
-                <h3>Project 3</h3>
-            </div>
+    <div class="movie-list">
+        <div class="movie">
+            <h2>The Shawshank Redemption</h2>
+            <img src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmRhMC00ZDIzLWFmNTEtODM1ZmRlZDUzMjRiXkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" alt="Shawshank Redemption Poster">
+            <p>A story of hope and friendship in prison.</p>
+            <a href="https://www.imdb.com/title/tt0111161/" target="_blank">More Info</a>
         </div>
-    </section>
+        <div class="movie">
+            <h2>Inception</h2>
+            <img src="https://m.media-amazon.com/images/I/51zUbui+gbL._AC_.jpg" alt="Inception Poster">
+            <p>A mind-bending thriller about dreams within dreams.</p>
+            <a href="https://www.imdb.com/title/tt1375666/" target="_blank">More Info</a>
+        </div>
+        <div class="movie">
+            <h2>Interstellar</h2>
+            <img src="https://m.media-amazon.com/images/I/71niXI3lxlL._AC_SY679_.jpg" alt="Interstellar Poster">
+            <p>A space epic exploring love, time, and survival.</p>
+            <a href="https://www.imdb.com/title/tt0816692/" target="_blank">More Info</a>
+        </div>
+        <!-- Aap aur movies yahan add kar sakte ho -->
+    </div>
 
-    <footer id="contact">
-        <p>Contact me: <a href="mailto:akgraphics@example.com" style="color:#f39c12;">akgraphics@example.com</a></p>
-        <p>&copy; 2026 AKGraphics. All rights reserved.</p>
-    </footer>
+    <script>
+        function searchMovies() {
+            const input = document.getElementById('searchInput').value.toLowerCase();
+            const movies = document.getElementsByClassName('movie');
+
+            for (let i = 0; i < movies.length; i++) {
+                const title = movies[i].getElementsByTagName('h2')[0].innerText.toLowerCase();
+                const desc = movies[i].getElementsByTagName('p')[0].innerText.toLowerCase();
+                if (title.includes(input) || desc.includes(input)) {
+                    movies[i].style.display = "";
+                } else {
+                    movies[i].style.display = "none";
+                }
+            }
+        }
+    </script>
 
 </body>
 </html>
