--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
     <div class="movie-list">
         <div class="movie">
-            <h2>The Shawshank Redemption</h2>
+            <h2> <a href="https://www.imdb.com/title/tt0111161/" target="_blank">The Shawshank Redemption</a></h2>
             <img src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmRhMC00ZDIzLWFmNTEtODM1ZmRlZDUzMjRiXkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" alt="Shawshank Redemption Poster">
             <p>A story of hope and friendship in prison.</p>
             <a href="https://www.imdb.com/title/tt0111161/" target="_blank">More Info</a>
         </div>
         <div class="movie">
-            <h2>Inception</h2>
+            <h2><a href="https://www.imdb.com/title/tt1375666/" target="_blank">Inception</a> </h2>
             <img src="https://m.media-amazon.com/images/I/51zUbui+gbL._AC_.jpg" alt="Inception Poster">
             <p>A mind-bending thriller about dreams within dreams.</p>
             <a href="https://www.imdb.com/title/tt1375666/" target="_blank">More Info</a>
         </div>
         <div class="movie">
-            <h2>Interstellar</h2>
+            <h2><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a> </h2>
             <img src="https://m.media-amazon.com/images/I/71niXI3lxlL._AC_SY679_.jpg" alt="Interstellar Poster">
             <p>A space epic exploring love, time, and survival.</p>
             <a href="https://www.imdb.com/title/tt0816692/" target="_blank">More Info</a>
