--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="movie-list">
         <div class="movie">
             <h2> <a href="https://www.imdb.com/title/tt0111161/" target="_blank">The Shawshank Redemption</a></h2>
-            <img src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmRhMC00ZDIzLWFmNTEtODM1ZmRlZDUzMjRiXkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" alt="Shawshank Redemption Poster">
+            <img src="https://m.media-amazon.com/images/M/MV5BMDAyY2FhYjctNDc5OS00MDNlLThiMGUtY2UxYWVkNGY2ZjljXkEyXkFqcGc@._V1_FMjpg_UX1200_.jpg" alt="Shawshank Redemption Poster">
             <p>A story of hope and friendship in prison.</p>
             <a href="https://www.imdb.com/title/tt0111161/" target="_blank">More Info</a>
         </div>
