--- a/index.html
+++ b/index.html
@@ -95,29 +95,85 @@
 
 <div class="movie-grid" id="movieGrid">
     <div class="movie-card">
-        <img src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmRhMC00ZDIzLWFmNTEtODM1ZmRlZDUzMjRiXkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" alt="Shawshank Redemption">
+        <img src="images/vaa-vaathiyaar.webp" alt="vaa-vaathiyaar">
         <div class="movie-content">
-            <h2><a href="https://www.imdb.com/title/tt0111161/" target="_blank">The Shawshank Redemption</a></h2>
-            <p>A story of hope and friendship in prison.</p>
-            <a href="https://www.example.com/download/shawshank" class="download-btn" target="_blank">Download Now</a>
+            <h2>Vaa Vaathiyaar (2026)</h2>
+            <p>After being raised as the reincarnation of a famous actor, a man finds himself clashing with his grandfather’s expectations of him.</p>
+            <a href="https://m4ulinks.com/number/48195" class="download-btn" target="_blank">Download Now</a>
         </div>
     </div>
 
     <div class="movie-card">
-        <img src="https://m.media-amazon.com/images/I/51zUbui+gbL._AC_.jpg" alt="Inception">
+        <img src="images/anaconda.webp" alt="anaconda">
         <div class="movie-content">
-            <h2><a href="https://www.imdb.com/title/tt1375666/" target="_blank">Inception</a></h2>
-            <p>A mind-bending thriller about dreams within dreams.</p>
-            <a href="https://www.example.com/download/inception" class="download-btn" target="_blank">Download Now</a>
+            <h2>Anaconda (2025)</h2>
+            <p>A group of friends facing mid-life crises head to the rainforest with the intention of remaking their favorite movie from their youth, only to find themselves in a fight for their lives against natural disasters, giant snakes and violent criminals.</p>
+            <a href="https://m4ulinks.com/number/48187" class="download-btn" target="_blank">Download Now</a>
         </div>
     </div>
 
     <div class="movie-card">
-        <img src="https://m.media-amazon.com/images/I/71niXI3lxlL._AC_SY679_.jpg" alt="Interstellar">
+        <img src="images/shambhala.webp" alt="shambhala">
         <div class="movie-content">
-            <h2><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a></h2>
-            <p>A space epic exploring love, time, and survival.</p>
-            <a href="https://www.example.com/download/interstellar" class="download-btn" target="_blank">Download Now</a>
+            <h2>Shambhala (2025)</h2>
+            <p>When a meteor crashes into the highly superstitious village of Shambhala in the 1980s, strange supernatural events unfold, forcing an atheist scientist to face an ancient horror-one that science can’t explain or escape.</p>
+            <a href="https://m4ulinks.com/number/48174" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/border-2.webp" alt="Border 2 (2026)">
+        <div class="movie-content">
+            <h2>Border 2 (2026)</h2>
+            <p>Young Indian fighters prepared to protect their homeland from a greater threat during the 1971 Indo-Pak war.</p>
+            <a href="https://m4ulinks.com/number/48148" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/zootopia-2.webp" alt="Zootopia 2 (2025)">
+        <div class="movie-content">
+            <h2>Zootopia 2 (2025)</h2>
+            <p>After cracking the biggest case in Zootopia’s history, rookie cops Judy Hopps and Nick Wilde find themselves on the twisting trail of a great mystery when Gary De’Snake arrives and turns the animal metropolis upside down.</p>
+            <a href="https://m4ulinks.com/number/47145" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/45-2025.webp" alt="45 (2025)">
+        <div class="movie-content">
+            <h2>45 (2025)</h2>
+            <p>A gripping tale of life, love, and destiny, filled with raw emotions, intense drama and high-octane action.</p>
+            <a href="https://m4ulinks.com/number/47606" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/space-gen-chandrayaan.webp" alt="Space Gen: Chandrayaan (2026) Season 1">
+        <div class="movie-content">
+            <h2>Space Gen: Chandrayaan (2026) Season 1</h2>
+            <p>Indian space engineers face mounting pressure to redeem themselves following the Chandrayaan 2 lunar mission’s unexpected outcome.</p>
+            <a href="https://m4ulinks.com/number/48127" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/tere-ishk-mein.webp" alt="Tere Ishk Mein (2025)">
+        <div class="movie-content">
+            <h2>Tere Ishk Mein (2025)</h2>
+            <p>Shankar and Mukti’s intense love story unfolds against the backdrop of Benaras, exploring surrender and transformation through an all-consuming romance that heals, hurts, and changes them</p>
+            <a href="https://m4ulinks.com/number/46864" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/Mark.webp" alt="Interstellar">
+        <div class="movie-content">
+            <h2>Mark (2025) [Tamil + Telugu + Malayalam + Kannada]</h2>
+            <p>A suspended police officer confronts criminals and corrupt politicians terrorizing the state. As violence erupts, he returns to duty to defeat the villains and restore justice.</p>
+            <a href="https://m4ulinks.com/number/48129" class="download-btn" target="_blank">Download Now</a>
+        </div>
+    </div>
+    <div class="movie-card">
+        <img src="images/the-rajasaab.webp" alt="The Raja Saab (2026)">
+        <div class="movie-content">
+            <h2>The Raja Saab (2026)</h2>
+            <p>A young heir embraces both his royal heritage and rebellious spirit as he rises to power, establishing unprecedented rules during his reign as Raja Saab.</p>
+            <a href="https://m4ulinks.com/number/47822" class="download-btn" target="_blank">Download Now</a>
         </div>
     </div>
 
