--- a/404.html
+++ b/404.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>404 | Terminal Error</title>
+<title>404 | Command Not Found</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
   :root {
     --bg: #000;
-    --text: #00ff66;
+    --text: #0f0;
     --accent: #00ffd5;
   }
 
@@ -51,22 +51,21 @@
     51%,100% { opacity: 0; }
   }
 
-  .bar {
-    width: 100%;
-    height: 10px;
+  .btn {
+    background: transparent;
+    color: var(--accent);
     border: 1px solid var(--accent);
+    padding: 10px 26px;
+    font-family: "Courier New", monospace;
+    font-size: 15px;
+    cursor: pointer;
     margin-top: 10px;
   }
 
-  .fill {
-    height: 100%;
-    width: 0%;
+  .btn:hover {
     background: var(--accent);
-    transition: width 1s linear;
-  }
-
-  .count {
-    color: var(--accent);
+    color: #000;
+    box-shadow: 0 0 12px var(--accent);
   }
 
   .hint {
@@ -82,6 +81,7 @@
 
 <script>
 const terminal = document.getElementById("term");
+
 const lines = [
 ` █████╗        ██╗  ██╗ `,
 `██╔══██╗       ██║ ██╔╝ `,
@@ -102,21 +102,18 @@ const lines = [
 `bash: cd: /admin: No such file or directory`,
 ``,
 `root@kali:~# systemctl status website`,
-`● website.service - Running`,
-`   Loaded: loaded (/etc/systemd/system/site.service)`,
-`   Active: active (running)`,
+`● website.service - active (running)`,
 ``,
-`root@kali:~# ERROR 404 : PAGE NOT FOUND`,
-`Initializing safe redirect...`
+`ERROR 404 : PAGE NOT FOUND`,
+`Session terminated. Manual action required.`
 ];
 
 let lineIndex = 0;
 let charIndex = 0;
-let seconds = 10;
 
 function typeLine() {
   if (lineIndex >= lines.length) {
-    startRedirect();
+    showButton();
     return;
   }
 
@@ -141,23 +138,17 @@ function typeLine() {
   }
 }
 
-function startRedirect() {
+function showButton() {
   terminal.innerHTML += `
-  <div class="line">Redirecting to home in <span class="count" id="sec">10</span>s <span class="blink">█</span></div>
-  <div class="bar"><div class="fill" id="fill"></div></div>
-  <div class="hint">Press <b>T</b> to toggle neon theme</div>
+  <br>
+  <div class="line">root@kali:~# ./go_home.sh <span class="blink">█</span></div>
+  <div class="line">
+    <button class="btn" onclick="window.location.href='/'">
+      ➜ GO TO HOMEPAGE
+    </button>
+  </div>
+  <div class="hint">Press <b>T</b> to toggle neon mode</div>
   `;
-
-  const fill = document.getElementById("fill");
-
-  const timer = setInterval(() => {
-    document.getElementById("sec").innerText = seconds;
-    fill.style.width = (100 - seconds * 10) + "%";
-    if (seconds === 0) {
-      window.location.replace("/");
-    }
-    seconds--;
-  }, 1000);
 }
 
 document.addEventListener("keydown", e => {
