--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-361NZ85YH1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-361NZ85YH1');
+</script>
     <title>Ak Movies</title>
     <style>
         body {
@@ -198,3 +207,4 @@
 
 </body>
 </html>
+
