--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="dropdown">
             <button class="dropbtn">Mobiles & Accessories ▼</button>
             <div class="dropdown-content">
-                <a href="mobile.html">Mobiles</a>
+                <a href="mobile">Mobiles</a>
                 <a href="#">Mobile Covers</a>
                 <a href="#">Chargers & Cables</a>
                 <a href="#">Powerbanks</a>
@@ -116,4 +116,5 @@
     
 <script src="script.js"></script>
 </body>
+
 </html>
