--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="content-container" id="productGrid">
         
         <div id="no-results">No products found matching your search.</div>
-           <a href="mobile.html"  class="card product-item">
+           <a href="mobile"  class="card product-item">
                 <h2>Mobiles</h2>
                   <div class="card-image">
                   <img src="https://m.media-amazon.com/images/I/71JGCn1z1TL._SX679_.jpg" alt="Design">
@@ -118,3 +118,4 @@
 </body>
 
 </html>
+
