--- a/index.html
+++ b/index.html
@@ -33,55 +33,55 @@
             <button class="dropbtn">Mobiles & Accessories ▼</button>
             <div class="dropdown-content">
                 <a href="mobile">Mobiles</a>
-                <a href="#">Mobile Covers</a>
-                <a href="#">Chargers & Cables</a>
-                <a href="#">Powerbanks</a>
-                <a href="#">Mobile Stand</a>
-                <a href="#">Earphones</a>
+                <a href="mobile_covers">Mobile Covers</a>
+                <a href="chargers_cables">Chargers & Cables</a>
+                <a href="powerbanks">Powerbanks</a>
+                <a href="mobile_stands">Mobile Stands</a>
+                <a href="earphones">Earphones</a>
             </div>
         </div>
 
         <div class="dropdown">
             <button class="dropbtn"> Laptops & Accessories ▼</button>
             <div class="dropdown-content">
-                <a href="#">Gaming Laptops</a>
-                <a href="#">Office Laptops</a>
-                <a href="#">Mouse & Keyboards</a>
-                <a href="#">Laptop Bags</a>
-                <a href="#">Hard Drives / SSD</a>
-                <a href="#">Pen Drives</a>
+                <a href="gaming_laptops">Gaming Laptops</a>
+                <a href="office_laptops">Office Laptops</a>
+                <a href="mouse_keyboards">Mouse & Keyboards</a>
+                <a href="laptop_bags">Laptop Bags</a>
+                <a href="hard_drives">Hard Drives / SSD</a>
+                <a href="pen_drives">Pen Drives</a>
             </div>
         </div>
 
         <div class="dropdown">
             <button class="dropbtn">Watches ▼</button>
             <div class="dropdown-content">
-                <a href="#">Smartwatches</a>
-                <a href="#">Men's Watches</a>
-                <a href="#">Women's Watches</a>
-                <a href="#">Kids' Watches</a>
+                <a href="smartwatches">Smartwatches</a>
+                <a href="men_watches">Men's Watches</a>
+                <a href="women_watches">Women's Watches</a>
+                <a href="kids_watches">Kids' Watches</a>
             </div>
         </div>
 
         <div class="dropdown">
             <button class="dropbtn"> Home & Kitchen ▼</button>
             <div class="dropdown-content">
-                <a href="#">Kitchen Appliances</a>
-                <a href="#">Home Decor</a>
-                <a href="#">Bedding</a>
-                <a href="#">Furniture</a>
-                <a href="#">Lighting</a>
+                <a href="kitchen_appliances">Kitchen Appliances</a>
+                <a href="home_decore">Home Decor</a>
+                <a href="bedding">Bedding</a>
+                <a href="furniture">Furniture</a>
+                <a href="lighting">Lighting</a>
             </div>
         </div>
 
         <div class="dropdown">
             <button class="dropbtn"> Fashion ▼</button>
             <div class="dropdown-content">
-                <a href="#">Men's Clothing</a>
-                <a href="#">Women's Clothing</a>
-                <a href="#">Kids' Fashion</a>
-                <a href="#">Shoes & Footwear</a>
-                <a href="#">Bags & Luggage</a>
+                <a href="men_clothings">Men's Clothing</a>
+                <a href="women_clothings">Women's Clothing</a>
+                <a href="kids_fashions">Kids' Fashions</a>
+                <a href="shoes_footwear">Shoes & Footwear</a>
+                <a href="bags_luggage">Bags & Luggage</a>
             </div>
         </div>
 
@@ -118,4 +118,5 @@
 </body>
 
 </html>
+
 
