--- a/mobile_covers.html
+++ b/mobile_covers.html
@@ -90,7 +90,7 @@
 
     <div class="main-content">
 
-        <h1 class="category-title">Mobiles</h1>
+        <h1 class="category-title">Mobile Covers</h1>
 
         <div class="product-grid">
 
