--- a/mobile.html
+++ b/mobile.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobiles - AK Store</title>
+    <meta name="description" content="Explore a wide range of latest 5G mobiles including iPhone 17 Pro, Samsung Galaxy, and Redmi at AK Store. Best prices and deals in India.">
+    <link rel="canonical" href="https://akgraphicsmedia.in/mobile" />
     <link rel="icon" type="image/png" href="iphone.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -411,5 +413,6 @@
 
 
 </html>
+
 
 
