--- a/mobile.html
+++ b/mobile.html
@@ -101,7 +101,7 @@
             <a href="https://amzn.to/3OaBrSE" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71JGCn1z1TL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71JGCn1z1TL._SX679_.jpg" alt="iPhone 17 Pro 256 GB"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -117,7 +117,7 @@
             <a href="https://amzn.to/3NNJNQ4" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/618vU2qKXQL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/618vU2qKXQL._SX679_.jpg" alt="iPhone 17 Pro 256 GB Gray"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -133,7 +133,7 @@
             <a href="https://amzn.to/45Bcy8G" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/81BGKLI+cWL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/81BGKLI+cWL._SX679_.jpg" alt="Redmi A4 5G"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -149,7 +149,7 @@
             <a href="https://amzn.to/4qNWYiI" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61YfJEGeqDL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61YfJEGeqDL._SX679_.jpg" alt="iQOO Z10x 5G "
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -165,7 +165,7 @@
             <a href="https://amzn.to/4t0JS2V" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/51HxVAuLvtL.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/51HxVAuLvtL.jpg" alt="POCO C71, Cool Blue"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -180,7 +180,7 @@
             <a href="https://amzn.to/4k6YYQj" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/81-HKhoE-JL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/81-HKhoE-JL._SX679_.jpg" alt="Vivo T4x 5G (Marine Blue, 128 GB)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -195,7 +195,7 @@
             <a href="https://amzn.to/4k8mBrY" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61vww2LWl9L._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61vww2LWl9L._SX679_.jpg" alt="iQOO Z10 Lite 5G "
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -210,7 +210,7 @@
             <a href="https://amzn.to/4a1wGlT" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/41cSpRScVlL.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/41cSpRScVlL.jpg" alt="Motorola G57 Power 5G "
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -225,7 +225,7 @@
             <a href="https://amzn.to/3M1vEOz" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71ZrPkGgcLL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71ZrPkGgcLL._SX679_.jpg" alt="Samsung Galaxy A55 5G"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -240,7 +240,7 @@
             <a href="https://amzn.to/4blFTYs" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/610lbucItmL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/610lbucItmL._SX679_.jpg" alt="Samsung Galaxy M07 Mobile (Black, 4GB RAM, 64GB Storage)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -255,7 +255,7 @@
             <a href="https://amzn.to/3NDIUtv" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61+i423decL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61+i423decL._SX679_.jpg" alt="POCO C75 5G, Silver Stardust"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -270,7 +270,7 @@
             <a href="https://amzn.to/3M1vQgL" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/81iDmqegt4L._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/81iDmqegt4L._SX679_.jpg" alt="realme NARZO 90x 5G"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -285,7 +285,7 @@
             <a href="https://amzn.to/4q63SyE" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61gGRaXQoGL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61gGRaXQoGL._SX679_.jpg" alt="iQOO Neo 10 (Inferno Red)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -300,7 +300,7 @@
             <a href="https://amzn.to/4bWLvZk" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71LIzk0Uj8L._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71LIzk0Uj8L._SX679_.jpg" alt="Lava Bold N1 Pro (Stealth Black, 4 GB RAM)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -315,7 +315,7 @@
             <a href="https://amzn.to/4a2k5im" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61Ce-6B6x+L._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61Ce-6B6x+L._SX679_.jpg" alt="iPhone Air 256 GB: Thinnest iPhone Ever"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -330,7 +330,7 @@
             <a href="https://amzn.to/4qG7WXk" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71MXmswILHL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71MXmswILHL._SX679_.jpg" alt="iPhone 17 Pro Max 256 GB: 17.42 cm (6.9″) Display with Promotion"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -345,7 +345,7 @@
             <a href="https://amzn.to/4t5AkUn" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61WM6IDaBPL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61WM6IDaBPL._SX679_.jpg" alt="iQOO Z10R 5G (Aquamarine, 12GB RAM, 256GB Storage)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -360,7 +360,7 @@
             <a href="https://amzn.to/4rfP3dB" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/51KMBLVX9cL.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/51KMBLVX9cL.jpg" alt="OPPO K13 5G with 7000mAh and 80W SUPERVOOC Charger"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -375,7 +375,7 @@
             <a href="https://amzn.to/49MofMf" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71Acpnvfu2L._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71Acpnvfu2L._SX679_.jpg" alt="Samsung Galaxy M56 5G Mobile "
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -390,7 +390,7 @@
             <a href="https://amzn.to/4kgpJlx" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/710SCukwhcL._SX679_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/710SCukwhcL._SX679_.jpg" alt="Redmi A4 5G (Starry Black, 6GB RAM, 128GB Storage)"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -413,6 +413,7 @@
 
 
 </html>
+
 
 
 
